# science-fest-server

./: .gitignore  api_test.http  main.py  pyproject.toml  요구사항.md
templates/: dashboard.html
