[project]
name = "science-fest-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.128.0",
    "jinja2>=3.1.6",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.90",
    "python-multipart>=0.0.22",
    "uvicorn>=0.40.0",
]
